# Maze-Mapper-Python

./: pyproject.toml
src/maze_mapper/: algorithm.py  gui.py  maze.py  utils.py
src/maze_mapper/algorithms/: a_star.py
